client notices